--- a/salad.html
+++ b/salad.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -18,15 +16,8 @@
 <!--START JS SCRIPTS-->  
 <script>
 $(document).ready(function(){ 
-$(".box1").addClass("animated tada");
-$(".box2").addClass("animated flipInY");
-$(".box3").addClass("animated hinge");
-$(".box4").addClass("animated swing");
-$(".box5").addClass("animated fadeInUpBig");
-$(".box6").addClass("animated lightSpeedIn");
-$(".box7").addClass("animated lightSpeedIn");
-$(".box8").addClass("animated zoomIn");
-$(".box9").addClass("animated flash");
+  $(".projects").addClass("animated slideInUp");
+  $(".intro").addClass("animated slideInUp");
 });
 </script>
 <!--END JS SCRIPTS-->  
@@ -237,6 +228,7 @@ p{
   margin-top:-25px;
   font-family: 'Heebo', sans-serif;
   font-weight:300;
+  line-height:22px;
 }
 
 p a{
@@ -257,49 +249,66 @@ p a:hover{
 
 .projects{
   position:relative;
-  padding-top:0px;
+  margin-top:75px;
 }
 
 .pimage{
- padding-top:75px;
+ 
 }
 
 .pvideo{
- padding-top:75px;
+ 
 }
 
 .desc{
   position:relative;
-  left:1px;
-  top:-35px;
-  background-color:none;
-  color:#fff;
-  border:none;
-  font-family: 'Chivo', sans-serif;
-  font-weight:700;
-  font-size:calc(22px + 1.5vw);
-  text-shadow: -1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
-}
-
-.about{
-  position:relative;
-  top:60px;
-  margin-left:7px;
-  margin-bottom:100px;
+  padding:15px 15px 15px 25px;
+  margin-left:4px;
+  margin-bottom:75px;
+  margin-top:35px;
   background-color:#fff;
   color:#000;
-  border:none;
+  border:solid 1px #000;
+  font-family: 'Heebo', sans-serif;
+  font-weight:300;
+  box-shadow: 0px 0px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000;
+  line-height:22px;
+}
+
+.desc a{
+  background-color:#ff0;
+  color:#000;
+  cursor:crosshair;
+}
+
+.desc a:hover{
+  background-color:#ff0;
+  color:#000;
+  text-decoration:none;
+  cursor:crosshair;
+}
+
+.intro{
+  position:relative;
+  padding:25px 25px 25px 35px;
+  margin-top:75px;
+  margin-left:7px;
+  margin-bottom:75px;
+  background-color:#fff;
+  color:#000;
+  border:solid 2px #000;
   font-family: 'Chivo', sans-serif;
   font-weight:400;
-  font-size:calc(8px + 1.5vw);
+  font-size:calc(11px + 1.5vw);
   text-shadow:none;
-  line-height:calc(30px + 1.5vw);
+  box-shadow: 0px 0px 0 #000, -5px 5px 0 #ff0, -7px 7px 0 #000;
+  line-height:calc(36px + 1.5vw);
 }
 
 .arrow{
-  font-size:calc(38px + 1.5vw);
+  font-size:calc(36px + 1.5vw);
   text-align:center;
-  padding:calc(35px + 1.5vw) 0px calc(35px + 1.5vw) 0px;
+  padding:calc(33px + 1.5vw) 0px calc(35px + 1.5vw) 0px;
 }
 
 
@@ -307,8 +316,8 @@ p a:hover{
 /*** START OF MEDIA QUERIES!!!! ***/
 @media screen and (min-width: 1280px){
   
-  .about{
-    font-size: 29px;
+  .intro{
+    font-size: 30px;
   }
   
   .desc{ 
@@ -530,19 +539,21 @@ p a:hover{
 -->
    </div>
       </div>
-	</ul>
+  </ul>
   
   
 <div class="projects"> 
   <div class="pvideo" id="1">
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/273462191' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
-   <div class="desc">&nbsp;</div>
-    <p>Say cheese <a href="">cow mascarpone</a>. Cheese slices airedale edam cauliflower cheese blue castello st. agur blue cheese caerphilly stinking bishop. Chalk and cheese brie cheesy feet when the cheese comes out everybody's happy cheese triangles fondue cheese strings chalk and cheese. Monterey jack when the cheese comes out everybody's happy when the cheese comes out everybody's happy dolcelatte cheeseburger emmental cheesecake chalk and cheese. Gouda cheese and biscuits manchego stinking bishop caerphilly macaroni cheese cut the cheese paneer. Cut the cheese chalk and cheese halloumi cheesy grin halloumi say cheese emmental cheese and biscuits. Danish fontina mascarpone queso cheese and wine rubber cheese everyone loves bavarian bergkase cheese and biscuits. When the cheese comes out everybody's happy.</p>
   </div>
-</div>
  
+ <div class="desc">
+  Say cheese <a href="">cow mascarpone</a>. Cheese slices airedale edam cauliflower cheese blue castello st. agur blue cheese caerphilly stinking bishop. Chalk and cheese brie cheesy feet when the cheese comes out everybody's happy cheese triangles fondue cheese strings chalk and cheese. Monterey jack when the cheese comes out everybody's happy when the cheese comes out everybody's happy dolcelatte cheeseburger emmental cheesecake chalk and cheese. Gouda cheese and biscuits manchego stinking bishop caerphilly macaroni cheese cut the cheese paneer. Cut the cheese chalk and cheese halloumi cheesy grin halloumi say cheese emmental cheese and biscuits. Danish fontina mascarpone queso cheese and wine rubber cheese everyone loves bavarian bergkase cheese and biscuits. When the cheese comes out everybody's happy.
+    </div> 
+  </div>
   </div>
 
+  
   <div class="footer">
     &copy; 2018 made in the jieuuniverse
   </div>
