--- a/vbr.html
+++ b/vbr.html
@@ -551,6 +551,7 @@ p a:hover{
   <img class="img-responsive" src="https://images2.imgbox.com/31/ee/UXXjh3Yt_o.jpg">
     <br/>
   <img class="img-responsive" src="https://images2.imgbox.com/94/d3/ejMA0e2G_o.jpg">
+    <br/>  
   <img class="img-responsive" src="https://images2.imgbox.com/01/5d/QHkjqOFB_o.jpg">
     <br/>
   <img class="img-responsive" src="https://images2.imgbox.com/c1/88/TVJRFHZs_o.jpg">
@@ -571,7 +572,7 @@ p a:hover{
   </div>
 
  <div class="desc">
-   <b>specs:</b> promotional items for vonbrandt & roe auction house including newsletters, flyers, social media banners, label stickers, and a 16-page catalogue.
+   <b>specs:</b> develop brand identity for vonbrandt & roe auction house from logo to color palatte, executing design throughout newsletters, flyers, social media banners, label stickers, and a 16-page catalogue.
    <br/>
    <b>completed:</b> 2017.
     </div>
