--- a/typography.html
+++ b/typography.html
@@ -547,8 +547,8 @@ p a:hover{
   </ul>
   
   <center>
-    <h3>↯ <a href="#1">fuck [blank]</a></h3> <!-- <h3>↯ <a href="#2">lithography</a></h3> 
-  </center> -->
+    <h3>↯ <a href="#1">fuck [blank]</a></h3> <!-- <h3>↯ <a href="#2">lithography</a></h3> -->
+  </center>
   
 <div class="projects"> 
   <center>
