--- a/salad.html
+++ b/salad.html
@@ -499,7 +499,7 @@ p a:hover{
       <input type="checkbox" id="drop-3" />
       <div class="dropdown dropdown1">
     <a href="/vbr">vb&r</a>
-    <a href="/">typography</a>
+    <a href="/typography">typography</a>
     <a href="/layout">publication layout</a>
     <a href="/">artist services</a>
     <a href="/">dérive</a>
