--- a/index.html
+++ b/index.html
@@ -293,9 +293,10 @@ p a:hover{
 
 .intro{
   position:relative;
+  max-width:750px;
   padding:25px 25px 25px 35px;
+  margin: 0 auto;
   margin-top:75px;
-  margin-left:7px;
   margin-bottom:75px;
   background-color:#fff;
   color:#000;
@@ -329,6 +330,11 @@ p a:hover{
 
 }
 
+@media only screen and (max-width:990px){
+  .intro{
+    margin-left:7px;
+  }
+} 
 
 @media only screen and (max-width:768px){
   .dropdown1 a{
