--- a/grid.html
+++ b/grid.html
@@ -391,24 +391,60 @@ p a:hover{
    </div>
       </div>
   </ul>
+
+
   
+<!-- THUMBNAIL PROJECTS GRID PAGE -->
+<div class="grid">
+<div class="row">
+<div class="col-md-4">
+ <img class="img-grid" src="https://images2.imgbox.com/36/17/5ZY2CnO6_o.jpg">
+</div>
   
-<!-- ABOUT PAGE --> 
-<div class="about row">
-  <div class="col-md-5"> 
-    <img style="width:100%;" src="https://images2.imgbox.com/bf/2d/ZHj4hGRO_o.png">
+<div class="col-md-4">
+  <img class="img-grid" src="https://images2.imgbox.com/0a/e1/Q6tncYrV_o.jpg">
+</div>
+
+<div class="col-md-4">
+  <img class="img-grid" src="https://images2.imgbox.com/90/3b/2ztd2gab_o.jpg">
+</div>
+  </div>   
+
+
+  
+<div class="row">
+  <div class="col-md-4">
+<img class="img-grid" src="https://images2.imgbox.com/55/01/XYGSIAl4_o.jpg">
   </div>
-  <div class="col-md-7">
-<i><span style="color:#fff; font-family: 'Shrikhand'; font-size:42px; -webkit-text-stroke: 1.25px black;
-  text-shadow:-2px 2px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000;">hello,</span></i>
-    <br/><br/>
-    jieun hong with a capital 'E'!
-  <br/><br/>
-designed in seoul, south korea; assembled in california and packaged with a bfa (studio art) from nyu in new york. international shipping available!
-  <br/><br/>
-  <span style="font-size:12px; line-height:20px;">*warning: high amounts of strawberry cheesecake ice cream or flamin' hot ruffles will trigger endorphin overdose!</span> 
+  
+ <div class="col-md-4">
+<img class="img-grid" src="https://images2.imgbox.com/ef/b6/VudL4h4s_o.jpg">
+  </div> 
+  
+    <div class="col-md-4">
+      <img class="img-grid" src="https://images2.imgbox.com/9f/8c/ZrBjL798_o.jpg">
   </div>
 </div>
+  
+  
+<div class="row">
+<div class="col-md-4">
+  <img class="img-grid" src="">
+</div>
+  
+<div class="col-md-4">
+  <img class="img-grid" src="">
+</div>
+
+<div class="col-md-4">
+</div>
+  
+  </div> 
+  </div>
+  
+  
+ 
+  
   </div>
   
   <div class="footer">
