--- a/work.html
+++ b/work.html
@@ -263,6 +263,12 @@ p a:hover{
   padding:10%;
 }
 
+/**
+Fixing bootstrap columns for safari
+ */
+.row:before, .row:after{
+ display: inline-block !important;
+}
 
 
 /*** START OF MEDIA QUERIES!!!! ***/
