--- a/fairlyoddparents.html
+++ b/fairlyoddparents.html
@@ -404,9 +404,9 @@ p a:hover{
   </div>
  
  <div class="desc">
-  this animation was my first attempt working with flash (back when animate was called flash) to create a frame by frame based off of found sound. i chose the opening theme song from <a href="https://www.youtube.com/watch?v=no8vgXg_rlw">the fairly oddparents</a> cartoon series to explore its typographical potential through animate word play.
+  This animation was my first attempt working with flash (back when animate was called flash) to create a frame by frame based off of found sound. I chose the opening theme song from <a href="https://www.youtube.com/watch?v=no8vgXg_rlw">The Fairly Oddparents</a> cartoon series to explore its typographical potential through animate word play.
    <br/><br/>
-   because this project was purely sound-driven, i wanted to take the existing animation out of the equation and bring the lyrics to life with a minimal and modern concept. redesigning the iconic intro with an emphasis on typography and flat graphics really allowed me to focus on the lyrics and the effects of each accompanying sound. 2015.
+   Because this project was purely sound-driven, I wanted to take the existing animation out of the equation and bring the lyrics to life with a minimal and modern concept. Redesigning the iconic intro with an emphasis on typography and flat graphics really allowed me to focus on the lyrics and the effects of each accompanying sound. 2015.
     </div> 
   </div>
   </div>
