--- a/work.html
+++ b/work.html
@@ -416,7 +416,7 @@ p a:hover{
   
 <div class="row">
   <div class="col-md-4">
-<img class="img-grid" style="opacity:0.5;" src="https://images2.imgbox.com/55/01/XYGSIAl4_o.jpg">
+<a href="/magazine"><img class="img-grid" src="https://images2.imgbox.com/55/01/XYGSIAl4_o.jpg"></a>
   </div>
   
  <div class="col-md-4">
