--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ p a:hover{
     <br/><br/>
     공사중입니다. 양해 부탁드립니다.
     <br/>
-    Sorry, under construction at the moment!
+    Being updated daily!
     <div class="arrow">↯</div>
     창의력 + 참신성 넘치는 인간 사람 = 홍지은!
     <br/>현재 2018 평창 동계올림픽과 패럴림픽 자원봉사자 활동 맞추고 열심히 취업준비 중이니 <a style="color:#fff; text-shadow: -1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000; -webkit-text-stroke: 1px black; text-decoration:none;" href="mailto:jieun@nyu.edu">&hearts;</a>콜은 언제든지 환영합니다.
