--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ p a:hover{
     <i><span style="color:#fff; font-family: 'Shrikhand'; font-size:42px; -webkit-text-stroke: 1.25px black;
   text-shadow:-2px 2px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000;">notice,</span></i>
     <br/><br/>
-    공사중입니다. 양해 부탁드립니다.
+    매일 매일 업데이트 하는 중! 양해 부탁드립니다.
     <br/>
     Being updated daily!
     <div class="arrow">↯</div>
