--- a/index.html
+++ b/index.html
@@ -397,20 +397,18 @@ p a:hover{
 <!-- HOME/NOTICE PAGE -->
   <div class="intro">
     <i><span style="color:#fff; font-family: 'Shrikhand'; font-size:42px; -webkit-text-stroke: 1.25px black;
-  text-shadow:-2px 2px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000;">notice,</span></i>
+  text-shadow:-2px 2px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000;">notice*</span></i>
     <br/><br/>
-    창의력 + 참신성 넘치는 인간 사람 = 홍지은!
-    <br/>현재 2018 평창 동계올림픽과 패럴림픽 자원봉사자 활동 맞추고 열심히 취업준비 중이니 <a style="color:#fff; text-shadow: -1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000; -webkit-text-stroke: 1px black; text-decoration:none;" href="mailto:jieun@nyu.edu">&hearts;</a>콜은 언제든지 환영합니다.
+	under construction; coming soon!
     
 <div class="arrow">↯</div>
     
-Creative human being a.k.a. JiEun!
-    <br/>Looking for design opportunities to share my growing potential after recently wrapping up volunteering at the 2018 Pyeongchang Winter Olympics and Paralympics. <a style="background-color:#ff0; text-decoration:none; color:#000;" href="mailto:jieun@nyu.edu">E-mails</a> are always welcome.
+<a style="background-color:#ff0; text-decoration:none; color:#000;" href="mailto:jieun@nyu.edu">e-mails</a> are always welcome.
   </div>
   </div>
   
   <div class="footer">
-    &copy; 2018 made in the jieuuniverse
+    &copy; 2020 made in the jieuuniverse
   </div>
   </body>
 <!--END HTML CODE-->
