--- a/index.html
+++ b/index.html
@@ -375,11 +375,11 @@ p a:hover{
     <i><span style="color:#fff; font-family: 'Shrikhand'; font-size:42px; -webkit-text-stroke: 1.25px black;
   text-shadow:-2px 2px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000;">notice*</span></i>
     <br/><br/>
-	under construction; coming soon!
+	  <center>under construction; coming soon!</center>
     
 <div class="arrow">↯</div>
     
-<a style="background-color:#ff0; text-decoration:none; color:#000;" href="mailto:jieun@nyu.edu">e-mails</a> are always welcome.
+<center><a style="background-color:#ff0; text-decoration:none; color:#000;" href="mailto:jieun@nyu.edu">e-mails</a> are always welcome.</center>
   </div>
   </div>
   
