--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@ body a{
 }
 
 .footer{
-  padding-bottom:10px;
+  position: fixed;
+  bottom:10px;
   color:#000;
   font-family: 'Roboto', sans-serif;
   font-weight:400i;
   font-size:9.5px;
   text-align:center;
-  position: bottom;
 }
 
 h1{
