--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body a{
 
 .footer{
   position: fixed;
-  bottom:10px;
+  bottom:15px;
   width:100%;
   color:#000;
   font-family: 'Roboto', sans-serif;
@@ -243,7 +243,7 @@ p a:hover{
   position:relative;
   max-width:550px;
   margin: auto;
-  padding:35px 20px 30px 30px;
+  padding:35px 20px 30px 20px;
   margin-top:7%;
   margin-bottom:75px;
   background-color:#ffffdd;
@@ -373,7 +373,7 @@ p a:hover{
 <!-- HOME/NOTICE PAGE -->
   <div class="intro">
     <i><span style="color:#fff; font-family: 'Shrikhand'; font-size:42px; -webkit-text-stroke: 1.25px black;
-  text-shadow:-2px 2px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000;">notice*</span></i>
+  text-shadow:-2px 2px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000; padding-left:15px;">notice*</span></i>
     <br/><br/>
 	  <center>under construction; coming soon!</center>
     
