--- a/work.html
+++ b/work.html
@@ -431,7 +431,7 @@ p a:hover{
 	
 <div class="row">
   <div class="col-md-4">
- <img class="img-grid" style="opacity:0.5;" src="https://images2.imgbox.com/73/b4/5WTp7Fih_o.jpg">
+ <img class="img-grid" style="opacity:0.5;" src="images/ryman.png">
 </div>
 	
 <div class="col-md-4">
